          (fixes monotone issue 101)
        
        - 'mtn privkey' did not recognize private keys solely available
          in the key store. this has been fixed.

        - add compatibility with Botan 1.9.9 and newer
          (fixes monotone issue 104)

        - 'automate remote' and 'automate remote_stdio' now use
          a given database given by an alias to read, store and validate
          a remote server's key fingerprint (fixes monotone issue 95) 

        Internal


Sun Oct 31 21:51:16 UTC 2010

        0.99.1 release.

        Bugs fixed

        - monotone crashed on x86_64 when a netsync action required
          the parsing of an URL. This has been fixed.
          (closes monotone issue 100)

        - monotone's automation interface version was reported wrongly
          as 12.1, where it should have been 13.0.


Thu Oct 28 21:07:18 UTC 2010

        0.99 release.

        Changes

        - The database scheme was changed; please execute 'mtn db mgirate'
          on all your local and remote databases.

        - Normal and automate sync, push, and pull now take a
          --dry-run option; no data is transferred, but the connection
          is made and a summary of what would be transferred is
          output.

        - The changelog editor format was simplified; user entered text
          is back at the top of file and the instructions have been reduced.
          The edited text is saved now even if a commit is canceled.

        - Selectors are much more powerful now and selector functions to
          calculate common sets of revisions have been introduced.
          The characters '(', ')', and ';' need to be quoted if mean literally
          (just like '/') because of this. See section 3.2 in the documentation
          for details.
          (fixes monotone bug #18302).

        - The SERVER [BRANCH] call syntax for network-related commands
          has been deprecated in favour of the existing, universal