@@ -27,7 +27,11 @@ XXX XXX XX XX:XX:XX UTC 2010
 
         - 'automate remote' and 'automate remote_stdio' now use
           a given database given by an alias to read, store and validate
-          a remote server's key fingerprint (fixes monotone issue 95) 
+          a remote server's key fingerprint (fixes monotone issue 95)
+
+        - monotone gives a proper error message now if a netsync URI
+          with the 'mtn' scheme misses the required host part
+          (fixes monotone issue 110)
 
         Internal
 
